`feat: Implement wallet connection and property listing functionality`
This commit includes a series of changes to the frontend codebase, primarily focusing on implementing wallet connection and property listing functionality. The changes involve:

* Adding wallet connection guards to various pages to prompt users

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ contracts/coverage/
 contracts/costs-reports.json
 .cache/
 
+# Protect private keys (mnemonics)
+contracts/settings/Testnet.toml
+contracts/settings/Mainnet.toml
+**/settings/Testnet.toml
+**/settings/Mainnet.toml
+
 # Frontend
 frontend/.next/
 frontend/out/
