--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,29 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stacks/connect": "^7.8.2",
+    "@stacks/network": "^6.16.1",
+    "@stacks/transactions": "^6.16.1",
+    "@tanstack/react-query": "^5.59.20",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "next": "14.2.18",
+    "next-intl": "^3.22.2",
+    "pinata-web3": "^0.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@stacks/connect": "^7.8.2",
-    "@stacks/transactions": "^6.16.1",
-    "@stacks/network": "^6.16.1",
-    "next-intl": "^3.22.2",
-    "@tanstack/react-query": "^5.59.20",
-    "zustand": "^5.0.1",
     "recharts": "^2.15.0",
-    "lucide-react": "^0.460.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.18"
+    "eslint-config-next": "14.2.18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
