--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "url": "https://github.com/yourusername/micropropiedad-btc"
   },
   "scripts": {
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "install:all": "npm install && cd frontend && npm install && cd ../contracts && npm install && cd ../backend && npm install",
     "dev:contracts": "cd contracts && clarinet devnet start",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
-    "test:contracts": "cd contracts && clarinet test",
-    "deploy:testnet": "cd contracts && clarinet deploy --testnet",
-    "deploy:mainnet": "cd contracts && clarinet deploy --mainnet",
+    "test:contracts": "cd contracts && npm test",
+    "test:watch": "cd contracts && npm run test:watch",
+    "check:contracts": "cd contracts && clarinet check",
+    "deploy:testnet": "cd contracts && clarinet deployments apply --testnet",
+    "deploy:mainnet": "cd contracts && clarinet deployments apply --mainnet",
     "lint": "npm run lint --workspaces",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
