`Update property registration and purchase logic to use property-multi contract`
`Refactor property registration and purchase code to use property-multi contract instead of individual property contracts`

--- a/contracts/Clarinet.toml
+++ b/contracts/Clarinet.toml
@@ -10,6 +10,11 @@ path = 'contracts/property.clar'
 clarity_version = 3
 epoch = 'latest'
 
+[contracts.property-multi]
+path = 'contracts/property-multi.clar'
+clarity_version = 3
+epoch = 'latest'
+
 [contracts.property-factory]
 path = 'contracts/property-factory.clar'
 clarity_version = 3
